renamed Maze_A_level_project to Maze

--- a/Maze/Maze.vbproj
+++ b/Maze/Maze.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <StartupObject>Maze_A_level_project.MazeForm</StartupObject>
+    <StartupObject>Maze.MazeForm</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
   </PropertyGroup>
